revert: fix(mobile) layout issues and touch targets
This reverts commit c8effb4e186c0bc37f422f58f602ac4aa840053e.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,7 +17,6 @@ body {
     )
     rgb(var(--background-start-rgb));
   min-height: 100vh;
-  overflow-x: hidden;
 }
 
 @layer utilities {
